# shelfbot

./: .env  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  ENVIRONMENT.md  INSTRUCTIONS.md  PROGRESS.md  README.md  docker-compose.yml  docker-entrypoint.sh  firmware_refactor_guide.md  four_wheel_drive_controller_plugin.xml  four_wheel_drive_hardware_interface_plugin.xml  inspect_log.sh  inspect_topics.sh  package.xml  progress.md  scenario_sequence_diagram.puml  shelfbot.esp32.wroom-idf.code  shelfbot.urdf  shelfbot_common.urdf.xacro  status.md  system_architecture.puml
.devcontainer/: devcontainer.json
.schemas/: urdf.xsd  urdf_xacro.xsd  xacro.xsd
config/: apriltag.rviz  camera_info.yaml  ekf.yaml  empty_map.pgm  empty_map.yaml  four_wheel_drive_controller.yaml  gazebo_controller.yaml  gazebo_params.yaml  isaac.sim.params.yaml  mission.xml  nav2_camera_params.yaml  nav2_odom_params.yaml  nav2_params.yaml  nav2_troubleshoot.rviz  orb_slam3_monocular.yaml  real.robot.params.yaml  real_robot_microros.params.yaml  shelfbot_config.rviz  shelfbot_odometry_config.rviz  shelfbot_successful.rviz  slam_toolbox_params.yaml
config/maneuvers/: turn_left_90.xml
include/: communication_interface.hpp  four_wheel_drive_controller.hpp  four_wheel_drive_hardware_interface.hpp  four_wheel_drive_odometry.hpp  microros_communication.hpp  mock_communication.hpp  rate_control.hpp  rest_communication.hpp  serial_communication.hpp  shelfbot_utils.hpp
include/shelfbot/: apriltag_manager.hpp  communication_interface.hpp  four_wheel_drive_controller.hpp  four_wheel_drive_hardware_interface.hpp  four_wheel_drive_odometry.hpp  log_zip.hpp  microros_communication.hpp  rate_control.hpp  shelfbot_comms.h  shelfbot_slam_orb3_node.hpp  shelfbot_utils.hpp
include/shelfbot/behavior_tree_nodes/: find_tag_action.hpp  move_action.hpp  spin_action.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/shelfbot/lib/shelfbot/: camera_driver  hardware_interface
install/shelfbot/share/ament_index/resource_index/package_run_dependencies/: shelfbot
install/shelfbot/share/shelfbot/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.zsh
install/shelfbot/share/shelfbot/cmake/: shelfbotConfig.cmake
install/shelfbot/share/shelfbot/launch/: rviz_launch.py
install/shelfbot/share/shelfbot/urdf/: common_properties.xacro  fixed_joint.xacro  revolute_joint.xacro  shelfbot.urdf.xacro
launch/: apriltag_detector.launch.py  controller_manager.launch.py  display.launch.py  gazebo.ros2_control_sim.launch.py  gazebo_mission_test.launch.py  gazebo_sim.launch.py  gazebo_sim.launch.py.bak  gazebo_sim_only.launch.py  gz.harmonic.launch.py  isaac_sim_shelfbot_launch.py  nav2_bt_real_robot.launch.py  nav2_dynamic.launch.py  nav2_minimal.launch.py  nav2_orb_slam3.launch.py  nav2_real_robot.launch.py  real_robot.launch.py  real_robot_hardened_lidar_microros.launch.py  real_robot_lidar_microros.launch.py  real_robot_microros.launch.py  real_robot_perception_test.launch.py  rtabmap.launch.py  rtabmap_rgb_only.launch.py  rviz_launch.py  shelfbot.launch.py  teleop.launch.py
rviz2/: shelfbot.rviz  shelfbot_config.rviz
scripts/: launch.sh  mission_starter.py  read_zip_log.py  send_goal_1m.py  sequence.rviz2.sh  sequence.sh  shelfbot_integration_test.py  shelfbot_integration_test.sh  topic_logger.py  transform_full_check.sh
shelfbot_ws/install/shelfbot/include/shelfbot/: apriltag_manager.hpp  communication_interface.hpp  four_wheel_drive_controller.hpp  four_wheel_drive_hardware_interface.hpp  four_wheel_drive_odometry.hpp  microros_communication.hpp  rate_control.hpp  shelfbot_comms.h  shelfbot_slam_orb3_node.hpp  shelfbot_utils.hpp
shelfbot_ws/install/shelfbot/lib/shelfbot/: apriltag_detector_node  camera_publisher  mission_starter.py  shelfbot_slam_orb3_node  topic_logger.py
shelfbot_ws/install/shelfbot/share/shelfbot/: four_wheel_drive_controller_plugin.xml  four_wheel_drive_hardware_interface_plugin.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml
shelfbot_ws/install/shelfbot/share/shelfbot/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  shelfbotConfig-version.cmake  shelfbotConfig.cmake
shelfbot_ws/install/shelfbot/share/shelfbot/config/: apriltag.rviz  camera_info.yaml  ekf.yaml  empty_map.yaml  four_wheel_drive_controller.yaml  nav2_camera_params.yaml  nav2_troubleshoot.rviz  orb_slam3_monocular.yaml  shelfbot_config.rviz  shelfbot_odometry_config.rviz  shelfbot_successful.rviz  valid_map.pgm
shelfbot_ws/install/shelfbot/share/shelfbot/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
shelfbot_ws/install/shelfbot/share/shelfbot/launch/: apriltag_detector.launch.py  nav2_bt_real_robot.launch.py  (+9 more)
src/: microros_communication.cpp  shelfbot_utils.cpp
src/control/: CMakeLists.txt  four_wheel_drive_controller.cpp  four_wheel_drive_hardware_interface.cpp
src/hardware/: CMakeLists.txt  camera_driver.cpp  hardware_interface.cpp  microros_communication.cpp  mock_communication.cpp  rest_communication.cpp  serial_communication.cpp
src/monitoring/: CMakeLists.txt  monitoring_node.cpp
src/navigation/: CMakeLists.txt  four_wheel_drive_odometry.cpp  path_planner.cpp
src/navigation/behavior_tree_nodes/: find_tag_action.cpp  move_action.cpp  spin_action.cpp
src/nodes/: CMakeLists.txt  apriltag_detector.cpp  apriltag_manager.cpp  camera_publisher.cpp  lidar_relay_node.cpp  shelfbot_slam_orb3_node.cpp
src/perception/: CMakeLists.txt
src/simulation/: CMakeLists.txt  shelfbot_simulation.xacro
src/utils/: CMakeLists.txt  shelfbot_utils.cpp
urdf/: base_axis.xacro  box.xacro  camera.xacro  common_properties.xacro  esp32_cam.xacro  fixed_joint.xacro  gazebo.urdf.xacro  isaac.sim.urdf.xacro  lidar_sensor.xacro  motor.xacro  real.robot.urdf.xacro  shelfbot.urdf.xacro  ultrasonic_sensor.xacro  wheel.xacro
worlds/: shelfbot_world.world
(+14 files in other folders)
