<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shelfbot</name>
  <version>0.0.1</version>
  <description>The Shelfbot package contains all functionalities related to the Shelfbot project.</description>

  <maintainer email="burger.christian@gmail.com">chris</maintainer>
  <license>Proprietary</license>

  <!-- Core build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies for nodes, hardware, and simulation -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rviz2</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>realtime_tools</depend>
  <depend>pluginlib</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
