<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shelfbot</name>
  <version>0.0.1</version>
  <description>The Shelfbot package contains all functionalities related to the Shelfbot project.</description>

  <maintainer email="burger.christian@gmail.com">chris</maintainer>
  <license>Proprietary</license>

  <!-- Build toolchain -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ── Core ROS 2 / rclcpp ──────────────────────────────────────────── -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- ── TF2 ──────────────────────────────────────────────────────────── -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- ── ros2_control ─────────────────────────────────────────────────── -->
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>realtime_tools</depend>
  <depend>pluginlib</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>

  <!-- ── Perception / Vision ──────────────────────────────────────────── -->
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>camera_info_manager</depend>
  <depend>message_filters</depend>
  <depend>apriltag_ros</depend>
  <depend>apriltag_msgs</depend>

  <!-- ── Navigation 2 ─────────────────────────────────────────────────── -->
  <!--
    nav2_bringup pulls in the full Nav2 stack at runtime.
    Individual packages are listed so rosdep installs them
    even when nav2_bringup is not present.
  -->
  <depend>nav2_bringup</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_common</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_smoother</depend>

  <!-- ── SLAM / Localisation ──────────────────────────────────────────── -->
  <depend>rtabmap_ros</depend>
  <depend>robot_localization</depend>

  <!-- ── Misc tooling ─────────────────────────────────────────────────── -->
  <depend>xacro</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
